------------------------------------------------------------------------

2012-01-28

* included rfm12_read_interrupt_flags_inline() again for performance
  reasons (interrupt handler might be to slow on 115200 Baud otherwise)
* clear interrupt flag before checking status (there is a glitch sometimes
  while the int line goes high, which triggers another interrupt otherweise,
  which also hurts performance
* LNA controllable over rfm12_livectrl

------------------------------------------------------------------------

2012-01-28

* reworked rfm12_init to use programspace table of init values. saves 40 Bytes.

------------------------------------------------------------------------

2012-01-28

* totally new table based livectrl implementation
* switchable livectrl client support from library (get strings for parameters)
* livectrl client support also useable over remote connection: only one
  simple rfm12_livectrl(uint8_t cmd, uint16_t value) function,
  where the parameters can be passed from a remote client.
* parameter load / save and client implementation in examples/uart_frontend

------------------------------------------------------------------------

2012-01-26

* additional livectrl functions
* tests for the livectrl functions in uart_frontend example

------------------------------------------------------------------------

2012-01-25

* rfm12_data_delayed removed and replaced by rfm12_data_safe which turns off
  the interrupt while sending livectrl commands.
* uart_frontend example with VT100 uart interface for controlling rfm12..
  this ist still work in progress.

------------------------------------------------------------------------

2012-01-24

* interrupt handler restructured from goto to do{}while(), fixed deadlock bug
  completely: it could still occur if rx or tx interrupt occurred during servicing
  wakeup timer interrupt.

------------------------------------------------------------------------

2012-01-24
