@@ -40,6 +40,10 @@
 #ifndef _RFM12_H
 #define _RFM12_H
 
+#ifdef __PLATFORM_LINUX__
+#include <stdint.h>
+#endif
+
 //this was missing, but is very important to set the config options for structs and such
 #include "include/rfm12_core.h"
 
